<resources>
    <string name="app_name">PrinterDemo</string>
    <string name="print">打印</string>
    <string name="device">设备</string>
    <string name="btDevices">蓝牙设备</string>
    <string name="search">搜索</string>
    <string name="enableBT">开启蓝牙</string>
    <string name="pairDevices">已配对设备</string>
    <string name="foundDevices">发现设备</string>
    <string name="tip_bt_off">蓝牙已关闭</string>
    <string name="tip_bt_on">蓝牙已开启</string>
    <string name="bonding">正在配对</string>
    <string name="bond_fail">配对失败</string>
    <string name="bonded">配对完成</string>
    <string name="printing">打印中</string>
    <string name="print_error">发生错误</string>
    <string name="tip_set_device_first">请先设置打印设备</string>

    <!--错误信息-->
    <string name="printer_not_connect">打印机未连接</string>
    <string name="wifi_address_null">Wi-Fi通讯，ip地址为空</string>
    <string name="wifi_connect_fail">Wi-Fi通讯，连接失败</string>
    <string name="wifi_send_fail">Wi-Fi通讯，发送数据失败</string>
    <string name="wifi_read_fail">Wi-Fi通讯，接收数据失败</string>
    <string name="wifi_udp_socket_create_fail">Wi-Fi设备搜索，udp创建失败</string>
    <string name="wifi_not_connect">Wi-Fi通讯，未建立连接</string>
    <string name="bt_address_null">蓝牙设备地址为空</string>
    <string name="bt_connect_fail">蓝牙设备连接失败</string>
    <string name="bt_send_fail">蓝牙设备发送数据失败</string>
    <string name="bt_receive">蓝牙设备接收数据失败</string>
    <string name="bt_not_connect">蓝牙设备未连接</string>
    <string name="usb_device_null">usb设备为空</string>
    <string name="usb_device_connect_fail">usb设备连接失败</string>
    <string name="usb_send_fail">usb设备发送数据失败</string>
    <string name="usb_receive_fail">usb设备接收数据失败</string>
    <string name="usb_not_connect">usb设备未连接</string>
    <string name="printer_receive_wrong">接收打印机返回有误</string>
    <string name="printer_verify">打印机校验不通过</string>
    <string name="printer_receive_timeout">接收打印机返回超时</string>
    <string name="PDF_CONVERT_FAIL">PDF打印，PDF转换失败</string>
    <string name="IMG_CONVERT_FAIL">PDF打印，图形转换失败</string>
    <string name="PDF_PATH_EMPTY">PDF打印，文件地址为空</string>
    <string name="PRINTER_TYPE_NULL">PDF打印，打印机类型不确定或不支持，无法进行图形转换</string>
    <string name="GET_PRINTER_TYPE_FAIL">获取打印机类型失败</string>
    <string name="CLIENT_CODE_INVALID">打印机客户编码不符</string>
    <string name="printerInfo">打印机信息</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="printText">文本打印</string>
    <string name="printImage">图片打印</string>
    <string name="printPrn">PRN文件打印</string>
    <string name="printFile">本地文件打印</string>
    <string name="printWifi">WiFi</string>
    <string name="bluetooth">蓝牙</string>
    <string name="usb">USB</string>
    <string name="devices">设备</string>
    <string name="devicesList">设备列表</string>
    <string name="addDevice">添加设备</string>
    <string name="tip_devices_empty">还没有设备，请先添加</string>
    <string name="tip_removeDevice">确定删除设备</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="wifiDevices">WiFi设备</string>
    <string name="setIp">指定IP端口</string>
    <string name="connectAp">连接热点</string>
    <string name="ip">IP  例如：192.168.5.163</string>
    <string name="port">端口  例如：9100</string>
    <string name="usbDevices">USB设备</string>
    <string name="tip_usbDenied">usb设备权限被拒绝</string>
    <string name="tip_selectDevice">选择打印设备</string>
    <string name="verification">连接验证</string>
    <string name="preventLost">防丢单模式</string>
    <string name="wifiPackage">WiFi传输分包大小</string>
    <string name="btPackage">蓝牙传输分包大小</string>
    <string name="usbPackage">USB传输分包大小</string>
    <string name="WifiSendDelay">wifi传输分包发送间隔</string>
    <string name="btSendDelay">蓝牙传输传输分包发送间隔</string>
    <string name="usbSendDelay">USB传输传输分包发送间隔</string>
    <string name="bytes">字节</string>
    <string name="wifi">WiFi</string>
    <string name="common">通用</string>
    <string name="packageSize">传输分包大小</string>
    <string name="sendDelay">分包发送延迟</string>
    <string name="ms">毫秒</string>
    <string name="version">版本号</string>
    <string name="tip_printSuccess">发送成功</string>
    <string name="tip_printFail">发生异常</string>
    <string name="resumePrint">续打</string>
    <string name="rePrint">重打</string>
    <string name="demo">示例</string>
    <string name="tip_printing">正在打印</string>
    <string name="rootDirectory">内部存储器</string>
    <string name="selectFile">选择文件</string>
    <string name="tip_noSelectFile">未选择文件，按“+”进行选择</string>
    <string name="tip_storageReadPermissionDenied">读取内部存储器权限被禁止，无法正常选择文件</string>
    <string name="fileName">文件名称</string>
    <string name="create">创建时间</string>
    <string name="bleDevices">Ble设备</string>
    <string name="ble">Ble</string>
    <string name="mtu">MTU大小</string>
    <string name="tip_bt_p_connect">蓝牙授权被禁止,无法启动蓝牙</string>
    <string name="tip_bt_p_scan">定位权限被禁止，无法搜索设备</string>

</resources>