<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:padding="10.0dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="onViewClick"
            android:src="@mipmap/back"
            app:tint="@color/theme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/btn_back"
            android:text="@string/wifiDevices"
            android:textColor="@color/theme"
            android:textSize="24dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_ip"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/ip" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_port"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/port" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        style="@style/MaterialButton2"
        android:layout_marginTop="5dp"
        android:text="@string/confirm"
        app:iconTint="@color/gray" />


</LinearLayout>