<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:padding="10.0dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="35dp" app:tint="@color/theme"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:onClick="onViewClick"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/btn_back"
            android:text="@string/wifiDevices"
            android:textColor="@color/theme"
            android:textSize="24dp"
            android:textStyle="bold" />
    </RelativeLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_connectAp"
        style="@style/MaterialButton"
        android:layout_marginTop="10dp"
        android:text="@string/connectAp"
        android:textAlignment="textStart"
        app:backgroundTint="@color/gray" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_setIp"
        style="@style/TextButton"
        android:layout_marginTop="10dp"
        android:text="@string/setIp"
        app:iconTint="@color/gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/TextButton"
        android:layout_marginTop="5dp"
        android:text="@string/search"
        app:iconTint="@color/gray" />


</LinearLayout>