<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:padding="10.0dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:onClick="onViewClick"
            android:src="@mipmap/back"
            app:tint="@color/theme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/btn_back"
            android:text="@string/printFile"
            android:textColor="@color/theme"
            android:textSize="24dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_edit"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:id="@+id/tv_selected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="a.txt"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tip_noSelectFile"
            android:textSize="16dp" />

        <ImageView
            android:id="@+id/btn_selectFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:onClick="onViewClick"
            android:src="@mipmap/add2"
            android:text="@string/selectFile"
            android:textSize="16dp" />
    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_print"
        style="@style/MaterialButton2"
        android:layout_marginVertical="10dp"
        android:text="@string/print" />
</LinearLayout>